--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "autoprefixer": "^10.4.16",
+    "nuxt-facebook-chat": "^1.0.5",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
   },
