--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@nuxt/ui": "^2.8.1",
     "sass": "^1.68.0",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "yup": "^1.3.2"
   }
 }
