--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -14,9 +14,18 @@ jobs:
       - uses: actions/checkout@v4
       - run: npm install
       - run: npm run build
+      - run: npm run generate
 
-      - uses: shinyinc/action-aws-cli@v1.2
-      - run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - run: aws s3 cp ./dist s3://${{ secrets.S3_BUCKET_NAME }}/
+
+#      - uses: shinyinc/action-aws-cli@v1.2
+#      - run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/
+#        env:
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
