--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -22,7 +22,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - run: aws s3 cp ./dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/
+      - run: aws s3 cp ./dist s3://${{ secrets.AWS_S3_BUCKET_NAME }} --recursive
 
 #      - uses: shinyinc/action-aws-cli@v1.2
 #      - run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/
